# django-demos

./: MANIFEST.in  README.md  setup.cfg
dwiest/django/demos/: conf.py  jinja2.py  urls.py
dwiest/django/demos/bookmarks/: forms.py  models.py  urls.py  views.py
dwiest/django/demos/expenses/: forms.py  models.py  urls.py  views.py
dwiest/django/demos/file/: forms.py  models.py  signals.py  urls.py  views.py
dwiest/django/demos/grecaptcha/: forms.py  urls.py  views.py
dwiest/django/demos/inventory/: forms.py  models.py  urls.py  views.py
dwiest/django/demos/invoicer/: forms.py  models.py  urls.py  views.py
dwiest/django/demos/journal/: forms.py  models.py  urls.py  views.py
dwiest/django/demos/migrations/: 0001_initial.py  0002_auto_20230209_2314.py  0003_auto_20230212_1651.py  0004_filesummary.py  0005_auto_20230223_0239.py  0006_bookmark.py
dwiest/django/demos/news/: consumers.py  forms.py  models.py  routing.py  urls.py  views.py
dwiest/django/demos/otp/: forms.py  urls.py  views.py
dwiest/django/demos/qrcode/: forms.py  urls.py  views.py
dwiest/django/demos/restapi/: serializers.py  urls.py  views.py
dwiest/django/demos/selenium/: forms.py  urls.py  views.py
dwiest/django/demos/templates/dwiest-django-demos/: css.html  default.css  django-messages-css.html  django-messages.css  hamburger.html  hamburgernav.html  header-css.html  header.css  header.html  home.html  nestednav.html  tooltips.css  topnav.html
dwiest/django/demos/templatetags/dwiest-django-demos/: tags.py
dwiest/django/demos/templatetags/dwiest_django_demos/: tags.py
(+71 files in other folders)
