[metadata]
name = dwiest-django-demos
version = 0.1
description = Demonstration Django apps
long_description = file:README.rst
url = https://github.com/dwiest/django-demos
author = Damian Wiest
author_email = damian@wiest.world
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django>=3.2
    django-appconf>=1.0.5
    qrcode>=7.3.1
    selenium>=4.7.2
    selenium-wire>=5.1.0
    pyotp>=2.8.0
